--- a/css/twitchTVFlex.scss
+++ b/css/twitchTVFlex.scss
@@ -29,6 +29,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 100%;
+    width: 100%;
     align-items: center;
     margin: 0 auto;
 }
