--- a/css/twithchFlexCrossBrowser.css
+++ b/css/twithchFlexCrossBrowser.css
@@ -9,30 +9,52 @@ body {
   font-size: 100%;
   padding-left: 0;
   padding-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
 
 * {
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .mainContainer {
-  flex: 1 0 auto;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   max-width: 100%;
   width: 100%;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0 auto; }
 
 .mainContainer > * {
   max-width: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; }
 
 header {
   background: #9c4be7;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
@@ -68,7 +90,9 @@ header {
 
 /*style buttons*/
 .myButton {
-  flex: 1 1 33%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 33%;
+          flex: 1 1 33%;
   border-radius: 5px;
   height: 30px;
   margin: 0;
@@ -82,14 +106,23 @@ header {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); }
 
 #content, #result {
-  flex-direction: column; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
   #content .users, #result .users {
     background-color: #cea5f3;
     min-height: 50px;
     margin-top: 2px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding-right: 5px;
     padding-left: 5px;
     text-align: center; }
@@ -99,7 +132,9 @@ header {
       text-decoration: none;
       font-weight: normal; }
     #content .users div:nth-child(1), #result .users div:nth-child(1) {
-      flex: 1 1 30%; }
+      -webkit-box-flex: 1;
+          -ms-flex: 1 1 30%;
+              flex: 1 1 30%; }
       #content .users div:nth-child(1) img, #result .users div:nth-child(1) img {
         width: 70%;
         padding: 0;
@@ -107,15 +142,20 @@ header {
         margin-right: auto;
         border-radius: 55%; }
     #content .users div:nth-child(2), #result .users div:nth-child(2) {
-      flex: 1 1 30%; }
+      -webkit-box-flex: 1;
+          -ms-flex: 1 1 30%;
+              flex: 1 1 30%; }
     #content .users div:nth-child(3), #result .users div:nth-child(3) {
-      flex: 4 1 40%; }
+      -webkit-box-flex: 4;
+          -ms-flex: 4 1 40%;
+              flex: 4 1 40%; }
 
 .offline {
   background-color: #d5e1df; }
 
 footer {
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   padding-top: 10px;
   text-align: center;
   font-size: 80%; }
@@ -233,5 +273,3 @@ span.twitter-typeahead {
   .mainContainer {
     max-width: 40%; } }
 /*end*/
-
-/*# sourceMappingURL=twitchTVFlex.css.map */
